gcc/testsuite/gdc.test/compilable/imports/imp16088.d
module imports.imp16088;
