gcc/testsuite/gdc.test/fail_compilation/imports/a14424.d
module imports.a14424;

unittest { }
